assets/css/form-style.css
form input {
    margin: 10px 10px 10px 10px;
}

.register-view, .login-view {
    color: white;
}

/* CONTAINERS */

#overlay-container,
#notification-overlay-container {
    opacity: 0;
    transition: opacity 0.25s ease;
    border-radius: 8px;
}

#overlay-container.open {
    position: fixed;
    top: 40vh;
    left: calc((100vw - 50vw) / 2);
    width: 50vw;
    max-width: 50vw;
    z-index: 300;
    background-color: rgb(17, 133, 168);
    padding: 20px;
    opacity: 1;
}

#notification-overlay-container.open {
    position: fixed;
    top: 10vh;
    left: calc((100vw - 30vw) / 2);
    width: 30vw;
    max-width: 30vw;
    z-index: 301;
    background-color: rgb(17, 168, 50);
    padding: 20px;
    opacity: 1;
}

#overlay-container.open.error,
#notification-overlay-container.open.error {
    background-color: red;
}

/* BACKDROPS */

#overlay-backdrop {
    transition: 2s;
}

#overlay-backdrop.activated {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0.4;
    z-index: 299;
    background-color: rgb(87, 87, 87);
}

#overlay-backdrop.activated.error {
    background-color: rgb(128, 0, 0);
}

